--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ pluggy==0.7.1
 py==1.6.0
 pytest==3.8.1
 pytest-cov==2.6.0
-requests==2.19.1
+requests==2.20.0
 six==1.11.0
-urllib3>=1.24.2
+urllib3==1.24.2
 
